--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,6 @@
 @import "sass/abstracts/variables";
 @import "sass/abstracts/mixins";
 
-
 // // Base
 @import "sass/base/base";
 
@@ -16,4 +15,4 @@
 @import "sass/components/blog";
 @import "sass/components/footer";
 @import "sass/components/blog-page";
-// @import "sass/components/vision";
+@import "sass/components/post";
