--- a/css/main.css
+++ b/css/main.css
@@ -1089,7 +1089,7 @@ html[dir="ltr"] .main-background {
 .product-slider .swiper-pagination .swiper-pagination-bullet {
   width: 6px;
   height: 6px;
-  background-color: #121112;
+  background-color: black;
   opacity: 0.3;
   margin: 0 3px;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1316,8 +1316,8 @@ html[dir="ltr"] .main-background {
 }
 
 .influencer-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
+  width: 6px;
+  height: 6px;
   background-color: #fff;
   opacity: 0.5;
   margin: 0 3px;
@@ -1564,15 +1564,15 @@ html[dir="ltr"] .main-background {
 }
 
 .blog-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 15px;
-  height: 3px;
+  width: 6px;
+  height: 6px;
   background-color: black;
-  opacity: 0.5;
+  opacity: 0.3;
   margin: 0 3px;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   outline: none !important;
-  border-radius: 0;
+  border-radius: 50%;
 }
 
 .blog-slider .swiper-pagination .swiper-pagination-bullet:hover {
