--- a/css/sass/components/_blog.scss
+++ b/css/sass/components/_blog.scss
@@ -149,15 +149,15 @@
 }
 
 .blog-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 15px;
-  height: 3px;
+  width: 6px;
+  height: 6px;
   background-color: rgb(0, 0, 0);
-  opacity: 0.5;
+  opacity: 0.3;
   margin: 0 3px;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   outline: none !important;
-  border-radius: 0;
+  border-radius: 50%;
   &:hover{
     background-color: $main-color;
   }
