--- a/css/sass/components/_footer.scss
+++ b/css/sass/components/_footer.scss
@@ -372,7 +372,9 @@ select {
 .select2-container.select2-container--open .select2-dropdown--below {
   border: 2px solid $white-color;
   border-top: 0;
-  border-radius: 25px;
+  // border-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
   padding-bottom: 10px;
 }
 .select2-container.select2-container--open .select2-dropdown--below {
