--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 @import "sass/components/courses";
 @import "sass/components/influencer";
 @import "sass/components/blog";
+@import "sass/components/form";
 @import "sass/components/footer";
 @import "sass/components/blog-page";
 @import "sass/components/post";
