--- a/css/sass/components/_footer.scss
+++ b/css/sass/components/_footer.scss
@@ -5,6 +5,10 @@ footer {
   background-color: $main-color;
   position: relative;
   overflow: hidden;
+  text-align: start;
+}
+.footer-cont {
+  margin-bottom: 75px;
 }
 .footer-head {
   font-weight: 400;
@@ -16,65 +20,59 @@ footer {
     font-weight: 700;
   }
 }
-.footer-cont {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 30px;
-  margin-bottom: 60px;
-  position: relative;
-  z-index: 2;
-}
-.footer-contact {
-  width: 100%;
-  overflow: hidden;
-  padding: 40px 30px;
-  text-align: start;
-  background-color: #1c1d6b;
-  border-radius: 15px;
-}
-.contact-box {
-  margin-bottom: 35px;
-}
-.contact-head {
-  font-size: 16px;
-  font-weight: 700;
-  color: $white-color;
-  margin-bottom: 16px;
-  text-transform: capitalize;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-}
-.contact-head i {
-  -webkit-margin-end: 8px;
-  margin-inline-end: 8px;
-  font-size: 24px;
-}
-.contact-pargh {
-  font-size: 15px;
-  color: #a9aaec;
-  line-height: 26px;
-  font-weight: 400;
-  width: 95%;
-  margin-bottom: 30px;
-}
-.contact-ancor {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  text-decoration: none !important;
-  overflow: hidden;
-  width: max-content;
-  font-size: 15px;
-  color: #a9aaec;
-  font-weight: 400;
-  transition: all 0.3s ease-in-out;
-  &:hover {
-    color: $hover-color;
+.footer-info{
+  .social{
+    display: none;
   }
 }
+.nav-foot-header {
+  padding: 0;
+  margin: 0 0 25px;
+}
+.footer-list a {
+  text-decoration: none;
+}
+.foot-header {
+  text-transform: capitalize;
+  white-space: nowrap;
+  font-weight: 700;
+  font-size: 16px;
+  color: $white-color;
+}
+.nav-foot-li {
+  margin-bottom: 10px;
+}
+.nav-foot-link {
+  color: #a9aaec;
+  font-size: 15px;
+  font-weight: 400;
+  display: inline-flex;
+  transition: all 0.3s ease-in-out;
+}
+.nav-foot-li .nav-foot-link:hover {
+  color: $white-color;
+  text-decoration: none;
+}
+.contact-box {
+  display: flex;
+  align-items: center;
+  text-align: start;
+  color: #a9aaec;
+  font-size: 15px;
+  font-weight: 400;
+  @include tr;
+}
+.contact-box i {
+  margin-inline-end: 8px;
+  font-size: 24px;
+  color: $white-color;
+}
+a.contact-box:hover {
+  color: $white-color;
+  text-decoration: none;
+}
 .social {
-  margin-top: 10px;
+  margin-top: 25px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -86,7 +84,7 @@ a.social-link {
   height: 36px;
   width: 36px;
   border-radius: 50%;
-  margin-inline-end: 6px;
+  margin-inline-end: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -98,19 +96,54 @@ a.social-link {
     background-color: $hover-color;
     color: $white-color;
   }
+  &:last-of-type{
+    margin: 0;
+  }
 }
-.footer-form-cont {
-  width: 100%;
-  overflow: hidden;
-  background-color: #1c1d6b;
-  padding: 40px 30px;
-  border-radius: 15px;
-}
-.footer-form {
+
+/*                             footer accordion                 */
+.footer-accordion.nav-foot-header {
+  margin-bottom: 0;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  justify-content: space-between;
 }
+
+.footer-accordion {
+  cursor: pointer;
+  width: 100%;
+  transition: 0.4s;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-panel {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s ease-out;
+  padding: 0 15px;
+  margin-bottom: 20px;
+}
+.news-letter .footer-panel {
+  padding: 0;
+}
+.footer-accordion:after {
+  content: "";
+  font-family: "line Awesome Free";
+  font-weight: 900;
+  font-size: 13px;
+  transition: all 0.5s ease-out;
+}
+html[dir="rtl"] .footer-accordion:after {
+  content: "";
+}
+.footer-accordion.active:after {
+  transform: rotate(90deg);
+}
+html[dir="rtl"] .footer-accordion.active:after {
+  transform: rotate(-90deg);
+}
+/*                             footer accordion                 */
 .form-head h2 {
   text-align: start;
   font-weight: 400;
@@ -121,12 +154,6 @@ a.social-link {
 .form-group {
   margin-bottom: 15px;
   width: 100%;
-}
-.input-row {
-  width: calc(50% - 5px);
-}
-.input-row:nth-of-type(2n + 1) {
-  margin-inline-end: 10px;
 }
 .form-input {
   background-color: $white-color;
@@ -419,27 +446,28 @@ select {
   margin: 0;
 }
 
-@include max-991 {
+@include max-767 {
   footer {
     padding: 70px 0 40px;
     margin-top: 50px;
+    .img-logo {
+      margin: 0 auto;
+      margin-bottom: 30px;
+      text-align: center;
+    }
   }
-  .footer-head{
-    font-size: 24px;
+  footer .social{
+    display: none;
+  }
+  footer .footer-info{
+    margin-bottom: 35px;
+    .social{
+      display: flex;
+      justify-content: center;
+    }
   }
   .footer-cont {
-    grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
-  }
-  .footer-form-cont,
-  .footer-contact {
-    padding: 40px 20px;
-  }
-  .input-row {
-    width: 100%;
-  }
-  .input-row:nth-of-type(2n + 1) {
-    margin-inline-end: 0px;
+    margin-bottom: 40px;
   }
 }
 
