--- a/css/main.css
+++ b/css/main.css
@@ -1453,6 +1453,36 @@ html[dir="ltr"] .second-btn {
   }
 }
 
+.influencer-flex-parent ~ .swiper-pagination,
+.influencer-flex-parent ~ .swiper-btn,
+.courses-flex-parent ~ .swiper-pagination,
+.courses-flex-parent ~ .swiper-btn,
+.blogs-flex-parent ~ .swiper-pagination,
+.blogs-flex-parent ~ .swiper-btn {
+  display: none;
+}
+
+.influencer-flex,
+.courses-flex,
+.blogs-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.influencer-flex .swiper-slide,
+.courses-flex .swiper-slide,
+.blogs-flex .swiper-slide {
+  width: auto;
+  margin: 0 15px;
+}
+
 /*                      .influencer-section                      */
 /*                              blog-section                    */
 .blog-section {
@@ -1834,6 +1864,48 @@ html[dir="ltr"] .second-btn {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
+}
+
+.form-domain {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  direction: ltr;
+  width: 100%;
+  max-width: 100%;
+  position: relative;
+}
+
+.form-domain .form-input {
+  padding-right: 120px;
+}
+
+.input-append {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 5px;
+  height: 32px;
+  padding: 0 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #e6e6e6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 16px;
+  color: #989898;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 @media (max-width: 991px) {
