--- a/css/sass/components/_influencer.scss
+++ b/css/sass/components/_influencer.scss
@@ -171,12 +171,42 @@
     height: 50px;
     font-size: 18px;
   }
-  .influencer-ancor{
+  .influencer-ancor {
     font-size: 16px;
   }
-  .influencer-figure{
+  .influencer-figure {
     max-width: 90px;
     max-height: 90px;
   }
 }
+.influencer-flex-parent ~ .swiper-pagination,
+.influencer-flex-parent ~ .swiper-btn,
+.courses-flex-parent ~ .swiper-pagination,
+.courses-flex-parent ~ .swiper-btn,
+.blogs-flex-parent ~ .swiper-pagination,
+.blogs-flex-parent ~ .swiper-btn {
+  display: none;
+}
+
+.influencer-flex,
+.courses-flex,
+.blogs-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.influencer-flex .swiper-slide,
+.courses-flex .swiper-slide,
+.blogs-flex .swiper-slide {
+  width: auto;
+  margin: 0 15px;
+}
+
 /*                      .influencer-section                      */
